<resources>
    <string name="app_name">Recipe Book</string>

    <!-- Login -->
    <string name="app_logo">App Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="dont_have_account_register">Don\'t have an account? Register</string>

    <!-- Register -->
    <string name="profile_image">Profile Image</string>
    <string name="name">Name</string>
    <string name="country">Country</string>
    <string name="register">Register</string>
    <string name="already_have_account_login">Already have an account? Login</string>

    <!-- Home -->
    <string name="profile">Profile</string>
    <string name="search_recipes">Search recipes</string>
    <string name="add_recipe">Add Recipe</string>

    <!-- Recipe -->
    <string name="recipe_title">Recipe Title</string>
    <string name="ingredients">Ingredients (comma separated)</string>
    <string name="steps">Steps (one per line)</string>
    <string name="category">Category</string>
    <string name="video_url">Video URL</string>
    <string name="save">Save</string>
    <string name="recipe_image">Recipe Image</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <!-- Profile -->
    <string name="back">Back</string>
    <string name="logout">Logout</string>
    <string name="user_photo">User Photo</string>
    <string name="my_recipes">My Recipes</string>
    <string name="remove_photo">Remove photo</string>
</resources>